# lab1_budancev

./: .gitignore  README.md  pyproject.toml  Пояснения.txt
src/: laba_koli_1.py  laba_koli_2.py  lt1.py  lt2.py  test.py
